# bit-packing

./: BitPacking.c  BitPacking.h  CMakeLists.txt  README.md  make_android.sh  make_linux32.sh  make_win32.bat  make_win64.bat
Plugins/BitPacking.bundle/Contents/MacOS/: BitPacking
Test/Assets/Plugins/: BitPacking.cs
Test/ProjectSettings/: ProjectSettings.asset
TestBitPacking/Assets/: TestBitPacking.cs  test.unity
TestBitPacking/ProjectSettings/: EditorBuildSettings.asset
bit-packing-build/: make_linux64.sh  make_osx.sh
bit-packing-build/manual_build_ios/BitPacking.xcodeproj/project.xcworkspace/xcuserdata/mac2.xcuserdatad/: UserInterfaceState.xcuserstate
bit-packing-build/manual_build_ios/BitPacking.xcodeproj/xcuserdata/mac2.xcuserdatad/xcschemes/: xcschememanagement.plist
manual_build_ios/BitPacking.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
manual_build_ios/BitPacking.xcodeproj/project.xcworkspace/xcuserdata/mac2.xcuserdatad/: UserInterfaceState.xcuserstate
manual_build_ios/BitPacking.xcodeproj/xcuserdata/mac2.xcuserdatad/xcschemes/: BitPacking.xcscheme
